--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -42,11 +42,6 @@
 /* Medium ------------ */
 @media screen and (max-width: 768px) {
 
-}
-
-/* Smaller ----------- */
-@media screen and (max-width : 650px) {
-
 	.navigation-bar {
 		height: 50px;
 		padding: 10px 0 0 0;
